[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "prognosais"
version = "0.2.3"
description = "Tool to quickly and easily train CNNs for medical imaging tasks"
license = "Apache-2.0"

authors = ["Sebastian van der Voort <svoort25@gmail.com>"]

readme = "README.md"

repository = "https://github.com/Svdvoort/prognosais"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "PrognosAIs" },
    ]


[tool.poetry.dependencies]
python = ">=3.7, <3.9"
matplotlib = "^3.2.1"
natsort = "^7.0.1"
pandas = "^1.0.3"
PyYAML = "^5.3.1"
scikit-learn = "^0.23.0"
slurmpie = "^0.4.0"
SimpleITK = "^1.2.4"
psutil = "^5.7.0"
numba = "^0.49.1"
tensorflow = "^2.2.0"
numpy = "^1.18.3"
h5py = "^2.10.0"
tensorflow-io = "^0.15.0"
tensorboard_plugin_profile = "^2.2.0"
tensorflow-addons = "^0.11.0"
[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
mypy = "^0.790"
darglint = "^1.2.3"
flake8 = "^3.8.1"
flake8-2020 = "^1.6.0"
flake8-aaa = "^0.10.0"
flake8-annotations = "^2.1.0"
flake8-annotations-complexity = "^0.0.4"
flake8-annotations-coverage = "^0.0.4"
flake8-assertive = "^1.2.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-broken-line = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.2"
flake8-debugger = "^3.2.1"
unimport = "^0.2.7"
Sphinx = "^3.3.0"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-executable = "^2.0.3"
flake8-expression-complexity = "^0.0.7"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.4"
flake8-import-order = "^0.18.1"
flake8-isort = "^3.0.0"
flake8-logging-format = "^0.6.0"
flake8-markdown = "^0.2.0"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.5.0"
flake8-plugin-utils = "^1.3.0"
flake8-polyfill = "^1.0.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.1.1"
flake8-quotes = "^3.2.0"
flake8-requirements = "^1.3.1"
flake8-rst = "^0.7.2"
flake8-rst-docstrings = "^0.0.14"
flake8-strict = "^0.2.1"
flake8-string-format = "^0.3.0"
flake8-typing-imports = "^1.9.0"
flake8-variables-names = "^0.0.3"
pandas-vet = "^0.2.2"
pep8-naming = "^0.10.0"
pytest-cov = "^2.8.1"
pytest-datafiles = "^2.0"
pytest-xdist = "^1.31.0"
sphinx-autodoc-typehints = "^1.10.3"
xdoctest = "^0.12.0"
pre-commit = "^2.4.0"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
black = "^20.8b1"
pytest-memprof = "^0.2.0"


[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']

[tool.isort]
line_length = 100
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

[tool.darglint]
docstring_style = "google"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
